# criterion-example

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  my_sum.h
tests/: CMakeLists.txt  test-my_sum.c
